Исправлены недочеты